[package]
name = "jeeves"
version = "0.1.0"
authors = ["Matt Helm <mthelm85@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
uuid = { version = "0.8.2", features = ["v4"] }
lazy_static = "1.4"
regex = "1.5"
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.12"
whoami = "1.1.2"